@@ -347,4 +347,5 @@ BUGFIXES:
 290 ==> 397001 - The "maximise" button is missing in decoration of the geolocation editor window [patch].
 291 ==> 397406 - Digikam shouldn't use parentheses when renaming files.
 292 ==> 397411 - Not being able to move files in a removable media collection which is not mounted.
-293 ==> 
+293 ==> 227566 - digiKam does not allow smb:// shared folder as picture collection.
+294 ==> 
